# convertidor-documentos

./: .gitignore  .npmrc  ENV_VARIABLES.md  LICENSE  MEJORA_CRT.md  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  tsconfig.json
python-service/: README.md  main.spec  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  verify_data.py
python-service/app/: __init__.py  config.py  main.py  models.py
python-service/app/extractors/: __init__.py  crt_extractor.py  homologacion_extractor.py  permiso_circulacion_extractor.py  soap_extractor.py
python-service/app/services/: __init__.py  excel_service.py  pdf_service.py  pdf_service_turbo.py
python-service/app/utils/: __init__.py  logger.py  pdf_utils.py  text_utils.py
python-service/benchmarks/: benchmark_all_types.py  compare_asyncio_vs_turbo.py  compare_systems.py  full_pipeline_benchmark.py  speed_benchmark.py
python-service/docs/: API_REFERENCE.md  ARQUITECTURA.md  PLAN_MIGRACION.md
python-service/scripts/: dev.bat  install_service.bat  uninstall_service.bat
python-service/tests/: conftest.py
python-service/tests/integration/: __init__.py  test_pdf_to_excel.py
python-service/tests/unit/: README.md  __init__.py  test_crt_extractor.py  test_homologacion_extractor.py  test_permiso_extractor.py  test_soap_extractor.py
src/app/: page.tsx
src/components/: ExpandedView.tsx  PreviewTable.tsx
src/components/results/: README.md  ResultsToolbar.tsx  (+2 more)
src/config/: config.ts
src/extractors/: crtExtractor.ts
src/types/: results.ts
(+2 files in other folders)
